<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingsViewModel"
            type="com.firebaseserviceandroidapp.features.setting.logic.SettingsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.setting.ui.screen.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/settings"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dark_mode"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switch_dark_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{settingsViewModel.isDarkModeEnabled}" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/language"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/language_options"
                        android:selectedItemPosition="@{settingsViewModel.selectedLanguagePosition}" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:onClick="@{() -> settingsViewModel.showLogoutConfirmationDialog()}"
                android:paddingVertical="10dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>